--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": "~3.5.0",
     "grunt": "~0.4.5",
     "grunt-babel": "~6.0.0",
+    "grunt-bump": "0.7.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.2",
     "grunt-contrib-uglify": "~0.11.0",
