--- a/docker/openshift/openshift-template-persistent.yml
+++ b/docker/openshift/openshift-template-persistent.yml
@@ -90,6 +90,7 @@ objects:
     replicas: 1
     selector:
       app: hawkular-grafana-persistent
+      deploymentconfig: hawkular-grafana
     strategy:
       rollingParams:
         timeoutSeconds: 10800
@@ -100,6 +101,7 @@ objects:
           openshift.io/container.hawkular-grafana.image.entrypoint: '["/run.sh"]'
         labels:
           app: hawkular-grafana-persistent
+          deploymentconfig: hawkular-grafana
           group: org.hawkular
       spec:
         containers:
